Updatera refererade programbibliotek

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
   <groupId>org.fribok</groupId>
   <artifactId>fribok</artifactId>
   <version>2.2-SNAPSHOT</version>
+  <prerequisites>
+    <maven>3.6.3</maven>
+  </prerequisites>
   <!-- Project Information -->
   <name>Fribok</name>
   <description>
@@ -25,16 +28,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
+        <version>3.13.0</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>
+            <arg>-Xlint:deprecation</arg>
+            <arg>-Xlint:unchecked</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.4</version>
+        <version>3.7.1</version>
         <configuration>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -55,9 +62,31 @@
       </plugin>
       <!-- Start: For IDEA-forms -->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-idea-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <jdkLevel>1.8</jdkLevel>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>ideauidesigner-maven-plugin</artifactId>
         <version>1.0-beta-1</version>
+        <dependencies>
+          <!-- 2021-10-19 version 212.5457.59 -->
+          <!-- but started with 212.5284.40  == Intellij IDEA v2021.2.2 2021-09-14/ljo -->
+          <dependency>
+            <groupId>com.jetbrains.intellij.java</groupId>
+            <artifactId>java-compiler-ant-tasks</artifactId>
+            <version>212.5457.59</version>
+          </dependency>
+          <dependency>
+            <groupId>com.jetbrains.intellij.java</groupId>
+            <artifactId>java-gui-forms-rt</artifactId>
+            <version>212.5457.59</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <goals>
@@ -71,46 +100,7 @@
           <failOnError>true</failOnError>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-idea-plugin</artifactId>
-        <version>2.2.1</version>
-        <configuration>
-          <jdkLevel>1.7</jdkLevel>
-        </configuration>
-      </plugin>
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>ideauidesigner-maven-plugin</artifactId>
-            <version>1.0-beta-1</version>
-            <dependencies>
-                <!-- 2021-10-19 version 212.5457.59 -->
-                <!-- but started with 212.5284.40  == Intellij IDEA v2021.2.2 2021-09-14/ljo -->
-                <dependency>
-                    <groupId>com.jetbrains.intellij.java</groupId>
-                    <artifactId>java-compiler-ant-tasks</artifactId>
-                    <version>212.5457.59</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.jetbrains.intellij.java</groupId>
-                    <artifactId>java-gui-forms-rt</artifactId>
-                    <version>212.5457.59</version>
-                </dependency>
-            </dependencies>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>javac2</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <fork>true</fork>
-                <debug>true</debug>
-                <failOnError>true</failOnError>
-            </configuration>
-        </plugin>
-        <!-- End: For IDEA-forms, but pluginRepositories added below  -->
+      <!-- End: For IDEA-forms, but pluginRepositories added below  -->
     </plugins>
     <resources>
       <resource>
@@ -188,7 +178,7 @@
         <dependency>
           <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>1.10</version>
+        <version>1.17.1</version>
         <scope>compile</scope>
       </dependency>
     <dependency>
@@ -199,61 +189,60 @@
     <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>1.8.0.7</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.fribok</groupId>
-      <artifactId>fonts</artifactId>
-      <version>0.1</version>
+      <version>1.8.0.10</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.lowagie</groupId>
       <artifactId>itext</artifactId>
-      <version>2.1.7</version>
+      <version>4.2.2</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>jasperreports</groupId>
+      <groupId>net.sf.jasperreports</groupId>
       <artifactId>jasperreports</artifactId>
-      <version>3.5.1</version>
+      <version>6.21.3</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jasperreports</groupId>
+      <artifactId>jasperreports-fonts</artifactId>
+      <version>6.21.3</version>
     </dependency>
     <dependency>
       <groupId>com.google.zxing</groupId>
       <artifactId>core</artifactId>
-      <version>3.4.1</version>
+      <version>3.5.3</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.zxing</groupId>
       <artifactId>javase</artifactId>
-      <version>3.4.1</version>
+      <version>3.5.3</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>2.5</version>
+      <version>6.1.14</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>2.5</version>
+      <version>6.1.14</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>javax.help</groupId>
       <artifactId>javahelp</artifactId>
-      <version>2.0.02</version>
+      <version>2.0.05</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.jexcelapi</groupId>
       <artifactId>jxl</artifactId>
-      <version>2.6.3</version>
+      <version>2.6.12</version>
       <scope>compile</scope>
     </dependency>
     <!--dependency>
@@ -264,7 +253,7 @@
     <dependency>
       <groupId>com.jgoodies</groupId>
       <artifactId>jgoodies-looks</artifactId>
-      <version>[2.7.0,)</version>
+      <version>2.7.0</version>
     </dependency>
     <!--dependency>
         <groupId>com.intellij</groupId>
@@ -286,12 +275,12 @@
     <dependency> 
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
-      <version>1.4.01</version>
+      <version>2.0.2</version>
     </dependency>
     <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
-      <version>2.11.0</version>
+      <version>2.12.2</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -304,7 +293,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.7</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -314,12 +303,13 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-javadoc-plugin</artifactId>
-	<version>2.5</version>
+	<version>3.11.1</version>
       </plugin>
       <!-- code browser -->
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-jxr-plugin</artifactId>
+        <version>3.6.0</version>
 	<configuration>
 	  <linkJavadoc>true</linkJavadoc>
 	</configuration>
@@ -328,18 +318,19 @@
       <plugin>
 	<groupId>org.codehaus.mojo</groupId>
 	<artifactId>jdepend-maven-plugin</artifactId>
+        <version>2.1</version>
       </plugin>
       <!-- findbugs -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>3.0.5</version>
       </plugin>
       <!-- checkstyle -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.5</version>
+        <version>3.6.0</version>
       </plugin>
     </plugins>
   </reporting>
